--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "4.1.1",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^5.6.1",
+    "ngx-spinner": "^10.0.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "uuid": "^8.3.0",
