--- a/api/Endpoint/appsettings.json
+++ b/api/Endpoint/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ApiUrl": "https://vdbx-dng-ecomm.herokuapp.com",
   "ConnectionStrings": {
-    "DefaultConnection": "data source=../ecomm.db"
+    "DefaultConnection": "data source = ecomm.db"
   },
   "Logging": {
     "LogLevel": {
